// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms/Slider Base slider: Forms/Slider Base slider 1`] = `
.c0 {
  overflow: visible;
  padding: 10px 0;
  background-color: #fff;
}

<div
  style={
    Object {
      "textAlign": "center",
    }
  }
>
   
  <div
    className="c0"
  >
    <div
      className="c0"
    >
      <span
        className="MuiSlider-root "
        onMouseDown={[Function]}
      >
        <span
          className="MuiSlider-rail"
        />
        <span
          className="MuiSlider-track"
          style={
            Object {
              "left": "0%",
              "width": "10%",
            }
          }
        />
        <input
          type="hidden"
          value="10"
        />
        <span
          aria-orientation="horizontal"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={10}
          className="MuiSlider-thumb PrivateValueLabel-thumb-396"
          data-index={0}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          role="slider"
          style={
            Object {
              "left": "10%",
            }
          }
          tabIndex={0}
        >
          <span
            className="PrivateValueLabel-offset-398 MuiSlider-valueLabel"
          >
            <span
              className="PrivateValueLabel-circle-399"
            >
              <span
                className="PrivateValueLabel-label-400"
              >
                10
              </span>
            </span>
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms/Slider Discrete slider: Forms/Slider Discrete slider 1`] = `
.c0 {
  overflow: visible;
  padding: 10px 0;
  background-color: #fff;
}

<div
  style={
    Object {
      "textAlign": "center",
    }
  }
>
   
  <div
    className="c0"
  >
    <span
      className="MuiSlider-root "
      onMouseDown={[Function]}
    >
      <span
        className="MuiSlider-rail"
      />
      <span
        className="MuiSlider-track"
        style={
          Object {
            "left": "0%",
            "width": "10%",
          }
        }
      />
      <input
        type="hidden"
        value="10"
      />
      <span
        aria-orientation="horizontal"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={10}
        className="MuiSlider-thumb PrivateValueLabel-thumb-415"
        data-index={0}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        role="slider"
        style={
          Object {
            "left": "10%",
          }
        }
        tabIndex={0}
      >
        <span
          className="PrivateValueLabel-offset-417 MuiSlider-valueLabel"
        >
          <span
            className="PrivateValueLabel-circle-418"
          >
            <span
              className="PrivateValueLabel-label-419"
            >
              10
            </span>
          </span>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Storyshots Forms/Slider With field: Forms/Slider With field 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 20px;
  fill: #0684DB;
}

<div
  style={
    Object {
      "textAlign": "center",
    }
  }
>
   
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item"
    >
      <span
        className=" star icon c0"
      >
        <svg
          className="c1"
          size="m"
        >
          <use
            href="#icon-star"
            xlinkHref="#icon-star"
          />
        </svg>
      </span>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
    >
      <span
        className="MuiSlider-root "
        onMouseDown={[Function]}
      >
        <span
          className="MuiSlider-rail"
        />
        <span
          className="MuiSlider-track"
          style={
            Object {
              "left": "0%",
              "width": "10%",
            }
          }
        />
        <input
          type="hidden"
          value="10"
        />
        <span
          aria-labelledby="input-slider"
          aria-orientation="horizontal"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={10}
          className="MuiSlider-thumb PrivateValueLabel-thumb-537"
          data-index={0}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          role="slider"
          style={
            Object {
              "left": "10%",
            }
          }
          tabIndex={0}
        >
          <span
            className="PrivateValueLabel-offset-539 MuiSlider-valueLabel"
          >
            <span
              className="PrivateValueLabel-circle-540"
            >
              <span
                className="PrivateValueLabel-label-541"
              >
                10
              </span>
            </span>
          </span>
        </span>
      </span>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item"
    >
      <div
        className="MuiFormControl-root MuiTextField-root"
        style={
          Object {
            "width": "2em",
          }
        }
      >
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            required={false}
            type="text"
            value={10}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
